More admin functionality

--- a/templates/system_admin/base.html
+++ b/templates/system_admin/base.html
@@ -57,8 +57,9 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/admin/core/tenant/">
-                                <i class="fas fa-building me-2"></i>Business Applications
+                            <a class="nav-link {% if request.resolver_match.url_name == 'business_management' %}active{% endif %}" 
+                               href="{% url 'system_admin:business_management' %}">
+                                <i class="fas fa-building me-2"></i>Business Management
                             </a>
                         </li>
                         <li class="nav-item">
@@ -68,13 +69,33 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/admin/subscriptions/subscriptionplan/">
+                            <a class="nav-link {% if request.resolver_match.url_name == 'subscription_plans' %}active{% endif %}" 
+                               href="{% url 'system_admin:subscription_plans' %}">
                                 <i class="fas fa-list me-2"></i>Subscription Plans
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/admin/auth/user/">
+                            <a class="nav-link {% if request.resolver_match.url_name == 'payment_management' %}active{% endif %}" 
+                               href="{% url 'system_admin:payment_management' %}">
+                                <i class="fas fa-money-bill-wave me-2"></i>Payments
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link {% if request.resolver_match.url_name == 'user_management' %}active{% endif %}" 
+                               href="{% url 'system_admin:user_management' %}">
                                 <i class="fas fa-users me-2"></i>Users
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link {% if request.resolver_match.url_name == 'analytics' %}active{% endif %}" 
+                               href="{% url 'system_admin:analytics' %}">
+                                <i class="fas fa-chart-bar me-2"></i>Analytics
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link {% if request.resolver_match.url_name == 'system_settings' %}active{% endif %}" 
+                               href="{% url 'system_admin:system_settings' %}">
+                                <i class="fas fa-cog me-2"></i>Settings
                             </a>
                         </li>
                         <li class="nav-item">
