Added admin setup

--- a/templates/system_admin/base.html
+++ b/templates/system_admin/base.html
@@ -81,6 +81,12 @@
                             </a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link {% if request.resolver_match.url_name == 'invoice_management' %}active{% endif %}" 
+                               href="{% url 'system_admin:invoice_management' %}">
+                                <i class="fas fa-file-invoice me-2"></i>Invoices
+                            </a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link {% if request.resolver_match.url_name == 'user_management' %}active{% endif %}" 
                                href="{% url 'system_admin:user_management' %}">
                                 <i class="fas fa-users me-2"></i>Users
@@ -99,8 +105,9 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/admin/">
-                                <i class="fas fa-tools me-2"></i>Django Admin
+                            <a class="nav-link {% if request.resolver_match.url_name == 'export_data' %}active{% endif %}" 
+                               href="{% url 'system_admin:export_data' %}">
+                                <i class="fas fa-download me-2"></i>Export Data
                             </a>
                         </li>
                     </ul>
@@ -136,7 +143,7 @@
                     {% for message in messages %}
                         <div class="alert alert-{{ message.tags }} alert-dismissible fade show" role="alert">
                             {{ message }}
-                            <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
+                            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
                         </div>
                     {% endfor %}
                 {% endif %}
