--- a/templates/system_admin/system_settings.html
+++ b/templates/system_admin/system_settings.html
@@ -141,12 +141,12 @@
                         <i class="fas fa-download me-2"></i>Export Payments
                     </a>
                     <hr>
-                    <a href="/admin/" class="btn btn-outline-secondary btn-sm">
-                        <i class="fas fa-tools me-2"></i>Django Admin
-                    </a>
                     <button class="btn btn-outline-warning btn-sm" onclick="clearCache()">
                         <i class="fas fa-broom me-2"></i>Clear Cache
                     </button>
+                    <a href="{% url 'system_admin:analytics' %}" class="btn btn-outline-info btn-sm">
+                        <i class="fas fa-chart-bar me-2"></i>View Analytics
+                    </a>
                 </div>
             </div>
         </div>
