--- a/templates/system_admin/dashboard.html
+++ b/templates/system_admin/dashboard.html
@@ -197,23 +197,23 @@
             <div class="card-body">
                 <div class="row">
                     <div class="col-md-3 mb-2">
-                        <a href="/admin/core/tenant/add/" class="btn btn-outline-primary w-100">
-                            <i class="fas fa-plus me-2"></i>Add Business
+                        <a href="{% url 'system_admin:business_management' %}" class="btn btn-outline-primary w-100">
+                            <i class="fas fa-plus me-2"></i>Manage Businesses
                         </a>
                     </div>
                     <div class="col-md-3 mb-2">
-                        <a href="/admin/subscriptions/subscriptionplan/" class="btn btn-outline-info w-100">
+                        <a href="{% url 'system_admin:subscription_plans' %}" class="btn btn-outline-info w-100">
                             <i class="fas fa-list me-2"></i>Manage Plans
                         </a>
                     </div>
                     <div class="col-md-3 mb-2">
-                        <a href="/admin/auth/user/" class="btn btn-outline-secondary w-100">
-                            <i class="fas fa-users me-2"></i>Manage Users
+                        <a href="{% url 'system_admin:payment_management' %}" class="btn btn-outline-secondary w-100">
+                            <i class="fas fa-credit-card me-2"></i>Payments
                         </a>
                     </div>
                     <div class="col-md-3 mb-2">
-                        <a href="/admin/" class="btn btn-outline-dark w-100">
-                            <i class="fas fa-tools me-2"></i>Full Admin
+                        <a href="{% url 'system_admin:invoice_management' %}" class="btn btn-outline-warning w-100">
+                            <i class="fas fa-file-invoice me-2"></i>Invoices
                         </a>
                     </div>
                 </div>
