--- a/templates/system_admin/subscription_plans.html
+++ b/templates/system_admin/subscription_plans.html
@@ -44,7 +44,7 @@
         <div class="card">
             <div class="card-header d-flex justify-content-between align-items-center">
                 <h5 class="mb-0">Subscription Plans</h5>
-                <a href="/admin/subscriptions/subscriptionplan/add/" class="btn btn-primary">
+                <a href="{% url 'system_admin:create_subscription_plan' %}" class="btn btn-primary">
                     <i class="fas fa-plus me-2"></i>Add New Plan
                 </a>
             </div>
@@ -111,7 +111,7 @@
                                     </td>
                                     <td>
                                         <div class="btn-group btn-group-sm" role="group">
-                                            <a href="/admin/subscriptions/subscriptionplan/{{ plan.id }}/change/" 
+                                            <a href="{% url 'system_admin:edit_subscription_plan' plan.id %}" 
                                                class="btn btn-outline-primary btn-sm" title="Edit Plan">
                                                 <i class="fas fa-edit"></i>
                                             </a>
